<resources>
    <string name="app_name">MyZomato</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_all_restaurant_fragment">AllRestaurantFragment</string>
    <string name="action_settings">Settings</string>

    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Movie selection</string>

    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_metric">Popular</string>

    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_imperial">Top rated</string>

    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">popular</string>

    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">top_rated</string>
    <string name="pref_title_account">Sort by cuisine</string>
    <string name="action_settings_ok">OK</string>
    <string name="action_settings_cancel">Cancel</string>
    <string name="settings_select">Sort restaurants!</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_connection">Connection not available</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="settings_button">Click to view sorted restaurants</string>
    <string name="breakfast_button">tip for breakfasts</string>
    <string name="lunch_button">tip for lunch</string>
    <string name="dinner_button">tip for dinner</string>
    <string name="add_favorites">Add to favorites:</string>
    <string name="remove_favorites">Remove from favorites:</string>
    <string name="your_position">Your Current Position</string>
    <string name="action_restaurant_click">Detail of clicked restaurant</string>
    <string name="restaurant_photo">photo of the restaurant is displayed</string>
    <string name="action_add_to_favorites">By clicking on button you can add or remove restaurant from favorites</string>
    <string name="simple_widget_image">simple widget image with no data inside</string>
    <string name="empty_widget">Empty widget</string>
    <string name="adress">Adress:</string>
    <string name="cuisines">Cuisines:</string>
    <string name="price">Price for two:</string>
    <string name="menu">MENU:</string>
    <string name="rating">Rating:</string>
    <string name="no_today_menu">No daily menu for today</string>
    <string name="town_title">Kosice</string>
    <string name="all_restaurants">ALL</string>
    <string name="favorite_restarants">FAVORITE</string>
    <string name="nearby_restaurants">NEARBY</string>
    <string name="euro_symbol">€</string>


</resources>
